--- a/nasdaq_api.ipynb
+++ b/nasdaq_api.ipynb
@@ -2,41 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "37f49139",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting quandl\n",
-      "  Downloading Quandl-3.7.0-py2.py3-none-any.whl (26 kB)\n",
-      "Requirement already satisfied: requests>=2.7.0 in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from quandl) (2.27.1)\n",
-      "Requirement already satisfied: python-dateutil in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from quandl) (2.8.2)\n",
-      "Requirement already satisfied: pandas>=0.14 in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from quandl) (1.4.2)\n",
-      "Requirement already satisfied: more-itertools in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from quandl) (8.13.0)\n",
-      "Requirement already satisfied: inflection>=0.3.1 in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from quandl) (0.5.1)\n",
-      "Requirement already satisfied: numpy>=1.8 in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from quandl) (1.21.5)\n",
-      "Requirement already satisfied: six in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from quandl) (1.16.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from pandas>=0.14->quandl) (2021.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from requests>=2.7.0->quandl) (2021.10.8)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from requests>=2.7.0->quandl) (3.3)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from requests>=2.7.0->quandl) (1.26.9)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\tyler\\anaconda3\\lib\\site-packages (from requests>=2.7.0->quandl) (2.0.4)\n",
-      "Installing collected packages: quandl\n",
-      "Successfully installed quandl-3.7.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install quandl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "e55c0d72",
    "metadata": {},
    "outputs": [],
@@ -46,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "1279c0ea",
    "metadata": {},
    "outputs": [],
@@ -56,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "ca5d33a4",
    "metadata": {},
    "outputs": [],
@@ -66,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "54cb5d39",
    "metadata": {},
    "outputs": [
@@ -226,7 +192,7 @@
        "2010-07-06    6866900.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,19 +200,14 @@
    "source": [
     "tsla.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4dadffe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "603d86ad8b85ddfa9e3f5afa803c807791a55dd11dd19be35e20f82ff807e88b"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
