--- a/td_api.ipynb
+++ b/td_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 270,
    "id": "6273f4e7",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 271,
    "id": "2e08fc23",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 272,
    "id": "86e892af",
    "metadata": {
     "scrolled": true
@@ -67,13 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 273,
    "id": "98ceb286",
    "metadata": {},
    "outputs": [],
    "source": [
     "def inTheMoney(bidI, exs):\n",
     "    if (bidI - exs) > 0:\n",
+    "        return True\n",
+    "    elif ((bidI - exs) / exs > -0.8):\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 274,
    "id": "fd17afb4",
    "metadata": {},
    "outputs": [
@@ -140,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length:  124\n",
+      "Length:  121\n",
       "Warrant:  BRMK+\n",
       "Issuer:  BRMK\n",
       "Exercise Price:  2.88\n",
